--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,6 +76,17 @@
 		appearance: none;
 	}
 
+	.responsive{
+		width: 100%;
+		max-width: 100%;
+  		height: auto;
+	}
+
+	video{
+		width: 100%    !important;
+  		height: auto   !important;
+	}
+
 /* Basic */
 
 	@media screen and (max-width: 480px) {
