Virtual Background Mobile Responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1086,6 +1086,11 @@
 		width: 50em;
 	}
 
+	#vb .video{
+		width: 100%    !important;
+  		height: auto   !important;
+	}
+
 /* Footer */
 
 	#footer {
